--- a/app/index.html
+++ b/app/index.html
@@ -125,8 +125,10 @@
 
       <div class="page-footer container">
         Copyright &copy; 2014 <a href="http://satoshilabs.com/" target="_blank">SatoshiLabs</a> |
-        Backend powered by <a href="https://bitsofproof.com/?page_id=826" target="_blank">Bits of Proof</a> |
-        <ng-include src="'views/debug.link.html'"></ng-include>
+        Backend powered by <a href="https://bitsofproof.com/?page_id=826" target="_blank">Bits of Proof</a>
+        <span class="pull-right">
+            <ng-include src="'views/debug.link.html'"></ng-include>
+        </span>
       </div>
     </div>
 
