--- a/app/index.html
+++ b/app/index.html
@@ -206,10 +206,12 @@
     <script src="scripts/services/uriRedirect.js"></script>
     <script src="scripts/services/modalOpener.js"></script>
     <script src="scripts/services/forgetModalService.js"></script>
+    <script src="scripts/services/fileReader.js"></script>
     <!-- directives -->
     <script src="scripts/directives/flashMessages.js"></script>
     <script src="scripts/directives/qrScan.js"></script>
     <script src="scripts/directives/focus.js"></script>
+    <script src="scripts/directives/homescreenImage.js"></script>
     <!-- controllers -->
     <script src="scripts/controllers/debug.js"></script>
     <script src="scripts/controllers/error.js"></script>
